# crossbook

./: .env.example  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
.sqlx/: query-0314edcb2ca3ca3f31e8e450a1686585891c3bd31d13d93313035973a774f59d.json  query-073d18039a18b15c09ac7769f206af6b513bdbc14d440fda9209280413be2c00.json  query-1c7e2cb0692f622d20e6b876aa2eac75876828d9f5605387ac14e8722e75a81a.json  query-3b20a709d1287bc3eb3baefe274c5733707c9a52fc1a51ae91268bb1768c12e0.json  query-6debe93f3dc6bbc7adc24a3ff90540401d70b42d5dd5915277bb7469a0899d78.json  query-a2ab581b082cc9628674905093823c900e93e31c4f03e860416d58bf1bacec5b.json  query-d82b0b552dbdc60d2af974d4465579b2a814c9bc5a369d63f9956b68cfcf5c0a.json
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployDemo.s.sol
contracts/src/: CrossbookSettlement.sol
contracts/src/interfaces/: ISettlement.sol
contracts/src/libraries/: OrderLib.sol
contracts/test/: Eip712Parity.t.sol  Scaffold.t.sol  Settlement.invariant.t.sol  Settlement.t.sol  SettlementBatch.t.sol
contracts/test/mocks/: Mocks.sol
crates/crossbook-cli/: Cargo.toml
crates/crossbook-cli/src/: main.rs
crates/crossbook-core/: Cargo.toml
crates/crossbook-core/benches/: matching.rs
crates/crossbook-core/src/: auction.rs  book.rs  eip712.rs  error.rs  lib.rs  price.rs  ring.rs  types.rs
crates/crossbook-core/tests/: allocation.rs  auction.rs  auction_props.rs  eip712_parity.rs  golden.rs  invariants.proptest-regressions  invariants.rs  matching.rs  price_props.rs  ring.rs
crates/crossbook-engine/: Cargo.toml
crates/crossbook-engine/migrations/: 0001_init.sql
crates/crossbook-engine/src/: api.rs  batch.rs  chain.rs  config.rs  db.rs  engine_task.rs  indexer.rs  ingest.rs  lib.rs  main.rs  reject.rs  settle.rs
crates/crossbook-engine/static/: index.html
crates/crossbook-engine/tests/: db.rs  differential.rs  e2e.rs  engine_task.rs
docs/: architecture.html  architecture.md  benchmarks.md  order-schema.md  threat-model.md
scripts/: demo.sh
