[package]
name = "crossbook-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tokio service: order intake, single-writer matching, settlement, indexer, REST/WS API."

[dependencies]
anyhow.workspace = true
tokio.workspace = true
thiserror.workspace = true
crossbook-core = { path = "../crossbook-core" }
alloy-primitives = "1.6.0"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "bigdecimal",
    "chrono",
] }
