[package]
name = "crossbook-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tokio service: order intake, single-writer matching, settlement, indexer, REST/WS API."

[dependencies]
anyhow.workspace = true
tokio.workspace = true
thiserror.workspace = true
crossbook-core = { path = "../crossbook-core" }
alloy-primitives = { version = "1.6.0", features = ["serde", "k256"] }
alloy-sol-types = "1.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { version = "1", default-features = false, features = [
    "std",
    "provider-http",
    "signer-local",
    "network",
    "contract",
    "sol-types",
    "rpc-types-eth",
    "reqwest-rustls-tls",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "bigdecimal",
    "chrono",
] }
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
futures-util = "0.3.32"

[features]
# Gates the end to end test, which reads compiled contract artifacts. Enable it
# after `forge build` (see `just e2e`).
e2e = []

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
